--- a/po/it.po
+++ b/po/it.po
@@ -2,14 +2,15 @@
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
 # 
+# Translators:
 msgid ""
 msgstr ""
 "Project-Id-Version: depfinder\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2010-01-28 13:19+0200\n"
-"PO-Revision-Date: 2011-08-21 18:24+0000\n"
+"PO-Revision-Date: 2010-11-30 06:44+0000\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: Italian (http://www.transifex.net/projects/p/depfinder/team/it/)\n"
+"Language-Team: Italian (http://www.transifex.net/projects/p/depfinder/language/it/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -36,33 +37,14 @@ msgid ""
 "                 (default: 1)\n"
 "    -v,          Show version information\n"
 "    -h,          This help message"
-msgstr ""
-"depfinder: trova le dipendenze dei pacchetti Slackware\n"
-"\n"
-"uso: depfinder [OPZIONI] <pacchetto.tgz|.txz|.tlz|.tbz o directory dei pacchetti>\n"
-"\n"
-"OPZIONI:\n"
-"    -f,          Scrive l'output delle dipendenze in un archivio invece dello stout.\n"
-"                Per default crea un archivio .dep. Vedi anche -s.\n"
-"    -s,          Scrive le dipendenze con informazioni sulla versione. Se\n"
-"                combinato con -f, crea un archivio slack-required\n"
-"    -a,          Controlla tutti gli archivi nell'albero delle cartelle invece di\n"
-"                 seguire l'HFS\n"
-"    -p,          Tenta di identificare le dipendenze python.\n"
-"    -j [jobs],   Il numero di processi paralleli di depfinder da avviare. Pi√π veloce\n"
-"                se coincide con il numero delle CPUs\n"
-"                (default: 1)\n"
-"    -v,          Visualizza le informazioni sulla versione\n"
-"    -h,          Questo messaggio"
+msgstr "depfinder: trova le dipendenze dei pacchetti Slackware\n\nuso: depfinder [OPZIONI] <pacchetto.tgz|.txz|.tlz|.tbz o directory dei pacchetti>\n\nOPZIONI:\n    -f,          Scrive l'output delle dipendenze in un archivio invece dello stout.\n                Per default crea un archivio .dep. Vedi anche -s.\n    -s,          Scrive le dipendenze con informazioni sulla versione. Se\n                combinato con -f, crea un archivio slack-required\n    -a,          Controlla tutti gli archivi nell'albero delle cartelle invece di\n                 seguire l'HFS\n    -p,          Tenta di identificare le dipendenze python.\n    -j [jobs],   Il numero di processi paralleli di depfinder da avviare. Pi√π veloce\n                se coincide con il numero delle CPUs\n                (default: 1)\n    -v,          Visualizza le informazioni sulla versione\n    -h,          Questo messaggio"
 
 #: ../depfinder:64
 #, sh-format
 msgid ""
 "depfinder version $VERSION (c) 2009 George Vlahavas\n"
 "Run \"depfinder -h\" for help information"
-msgstr ""
-"depfinder versione $VERSION (c) 2009 George Vlahavas\n"
-"Esegui \"depfinder -h\" per informazioni d'aiuto"
+msgstr "depfinder versione $VERSION (c) 2009 George Vlahavas\nEsegui \"depfinder -h\" per informazioni d'aiuto"
 
 #: ../depfinder:105
 #, sh-format
@@ -98,5 +80,3 @@ msgstr "ATTENZIONE: modulo python $i non trovato."
 #, sh-format
 msgid "ERROR: package requires libraries not found in the system:"
 msgstr "ERRORE: il pacchetto richiede delle librerie non trovate nel sistema:"
-
-
