--- a/po/pt_PT.po
+++ b/po/pt_PT.po
@@ -3,18 +3,20 @@
 # This file is distributed under the same license as the PACKAGE package.
 # 
 # Translators:
+# Hugo Carvalho <hugokarvalho@hotmail.com>, 2012.
+# phantomx <megaphantomx@bol.com.br>, 2011.
 msgid ""
 msgstr ""
 "Project-Id-Version: depfinder\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2010-01-28 13:19+0200\n"
-"PO-Revision-Date: 2010-11-30 06:44+0000\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"PO-Revision-Date: 2012-02-14 08:23+0000\n"
+"Last-Translator: Hugo Carvalho <hugokarvalho@hotmail.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: es\n"
+"Language: pt_PT\n"
 "Plural-Forms: nplurals=2; plural=(n != 1)\n"
 
 #: ../depfinder:41
@@ -37,46 +39,46 @@ msgid ""
 "                 (default: 1)\n"
 "    -v,          Show version information\n"
 "    -h,          This help message"
-msgstr "depfinder: encuentra las dependencias de paquetes Slackware\n\nUso: depfinder [OPCIONES] <paquete.tgz|.txz|.tlz|.tbz o directorio-de-empaquetado>\n\nOPCIONES:\n    -f,         Redirigir las dependencias de la salida estándar a un archivo.\n                Por defecto crea un archivo .dep. Ver también la opción -s.\n    -s,         Muestra las dependencias con información de la versión. Si se\n                combina con la opción -f, crea un archivo 'slack-required'.\n    -a,         Verificar todos los archivos en el árbol de directorios en lugar del\n                siguiente FHS.\n    -p,          Intentos de detección de dependencias de Python.\n    -j [jobs],  La cantidad de procesos depfinder en paralelo a ejecutar. Más rápido\n                si coincide la cantidad de sus procesadores/núcleos.\n                (por defecto: 1)\n    -v,          Mostrar la versión.\n    -h,          Mostrar este mensaje de ayuda."
+msgstr "depfinder: encontra as dependências de pacotes Slackware\n\nuso: depfinder [OPÇÕES] <pacote.tgz|.txz|.tlz|.tbz ou dir-de-empacotamento>\n\nOPÇÕES:\n    -f,          Direciona dependências para um ficheiro em vez da saída padrão.\n                 Por padrão ele cria um arquivo .dep. Veja também -s.\n    -s,          Direciona dependências com informação de versão. Se\n                 combinado com -f, ele cria um arquivo slack-required\n    -a,          Verifica todos os ficheiros numa ávore de diretório em vez de\n                 seguir o FHS\n    -p,          Tenta detectar dependências python.\n    -j [jobs],   O número de jobs paralelos do depfinder para executar. Mais\n                 rápido se for o mesmo de número de seus CPUs/cores\n                 (padrão: 1)\n    -v,          Exibir informação de versão\n    -h,          Esta mensagem de ajuda"
 
 #: ../depfinder:64
 #, sh-format
 msgid ""
 "depfinder version $VERSION (c) 2009 George Vlahavas\n"
 "Run \"depfinder -h\" for help information"
-msgstr "depfinder, versión $VERSION (c) 2009 George Vlahavas\nEjecute \"depfinder -h\" para ver la ayuda"
+msgstr "depfinder version $VERSION (c) 2009 George Vlahavas\nExecute \"depfinder -h\" para informação de ajuda"
 
 #: ../depfinder:105
 #, sh-format
 msgid "ERROR: No arguments found."
-msgstr "ERROR: No se encontraron argumentos."
+msgstr "ERRO: Nenhum argumento encontrado."
 
 #: ../depfinder:143
 #, sh-format
 msgid "ERROR: Number of jobs must be greater than one"
-msgstr "ERROR: La cantidad de procesos tiene que ser mayor que 1"
+msgstr "ERRO: Número de jobs deve ser maior que um"
 
 #: ../depfinder:161
 #, sh-format
 msgid "ERROR: Too many arguments"
-msgstr "ERROR: Demasiados argumentos"
+msgstr "ERRO: Muitos argumentos"
 
 #: ../depfinder:168
 #, sh-format
 msgid "ERROR: $arg not found"
-msgstr "ERROR: No se encontró $arg"
+msgstr "ERRO: $arg não encontrado"
 
 #: ../depfinder:179
 #, sh-format
 msgid "ERROR: $arg is not a package file or a directory!"
-msgstr "ERROR: $arg no es un archivo de paquete o un directorio!"
+msgstr "ERRO: $arg não é um pacote ou um diretório!"
 
 #: ../depfinder:300
 #, sh-format
 msgid "WARNING: python module $i not found."
-msgstr "ADVERTENCIA: No se encontró el módulo $i de python"
+msgstr "AVISO: módulo python $i não encontrado."
 
 #: ../depfinder:326
 #, sh-format
 msgid "ERROR: package requires libraries not found in the system:"
-msgstr "ERROR: el paquete necesita bibliotecas que no están en su sistema:"
+msgstr "ERRO: pacote requer bibliotecas não encontradas no sistema:"
