--- a/po/it.po
+++ b/po/it.po
@@ -3,19 +3,20 @@
 # This file is distributed under the same license as the PACKAGE package.
 # 
 # Translators:
+# laplume <laplume@libero.it>, 2012
 msgid ""
 msgstr ""
 "Project-Id-Version: depfinder\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2010-01-28 13:19+0200\n"
-"PO-Revision-Date: 2010-11-30 06:44+0000\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: Italian (http://www.transifex.net/projects/p/depfinder/language/it/)\n"
+"PO-Revision-Date: 2013-04-29 08:26+0000\n"
+"Last-Translator: gapan <vlahavas@gmail.com>\n"
+"Language-Team: Italian (http://www.transifex.com/projects/p/depfinder/language/it/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Language: it\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 #: ../depfinder:41
 #, sh-format
@@ -37,7 +38,7 @@ msgid ""
 "                 (default: 1)\n"
 "    -v,          Show version information\n"
 "    -h,          This help message"
-msgstr "depfinder: trova le dipendenze dei pacchetti Slackware\n\nuso: depfinder [OPZIONI] <pacchetto.tgz|.txz|.tlz|.tbz o directory dei pacchetti>\n\nOPZIONI:\n    -f,          Scrive l'output delle dipendenze in un archivio invece dello stout.\n                Per default crea un archivio .dep. Vedi anche -s.\n    -s,          Scrive le dipendenze con informazioni sulla versione. Se\n                combinato con -f, crea un archivio slack-required\n    -a,          Controlla tutti gli archivi nell'albero delle cartelle invece di\n                 seguire l'HFS\n    -p,          Tenta di identificare le dipendenze python.\n    -j [jobs],   Il numero di processi paralleli di depfinder da avviare. Pi√π veloce\n                se coincide con il numero delle CPUs\n                (default: 1)\n    -v,          Visualizza le informazioni sulla versione\n    -h,          Questo messaggio"
+msgstr "depfinder: trova le dipendenze dei pacchetti Slackware\n\nuso: depfinder [OPZIONI] <pacchetto.tgz|.txz|.tlz|.tbz o directory dei pacchetti>\n\nOPZIONI:\n    -f,          Scrive l'output delle dipendenze in un archivio invece dello stdout.\n                Per default crea un archivio .dep. Vedi anche -s.\n    -s,          Scrive le dipendenze con informazioni sulla versione. Se\n                combinato con -f, crea un file slack-required\n    -a,          Controlla tutti gli archivi nell'albero delle cartelle invece di\n                 seguire l'HFS\n    -p,          Tenta di identificare le dipendenze python.\n    -j [jobs],   Il numero di processi paralleli di depfinder da avviare. Più veloce\n                se coincide con il numero delle CPU\n                (default: 1)\n    -v,          Visualizza le informazioni sulla versione\n    -h,          Mostra messaggi di aiuto"
 
 #: ../depfinder:64
 #, sh-format
