--- a/po/pt_PT.po
+++ b/po/pt_PT.po
@@ -3,21 +3,21 @@
 # This file is distributed under the same license as the PACKAGE package.
 # 
 # Translators:
-# Hugo Carvalho <hugokarvalho@hotmail.com>, 2012.
-# phantomx <megaphantomx@bol.com.br>, 2011.
+# Hugo Carvalho <hugokarvalho@hotmail.com>, 2012
+# phantomx <megaphantomx@bol.com.br>, 2011
 msgid ""
 msgstr ""
 "Project-Id-Version: depfinder\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2010-01-28 13:19+0200\n"
-"PO-Revision-Date: 2012-02-14 08:23+0000\n"
-"Last-Translator: Hugo Carvalho <hugokarvalho@hotmail.com>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
+"PO-Revision-Date: 2013-04-29 08:26+0000\n"
+"Last-Translator: gapan <vlahavas@gmail.com>\n"
+"Language-Team: Portuguese (Portugal) (http://www.transifex.com/projects/p/depfinder/language/pt_PT/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Language: pt_PT\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 #: ../depfinder:41
 #, sh-format
@@ -39,46 +39,46 @@ msgid ""
 "                 (default: 1)\n"
 "    -v,          Show version information\n"
 "    -h,          This help message"
-msgstr "depfinder: encontra as dependências de pacotes Slackware\n\nuso: depfinder [OPÇÕES] <pacote.tgz|.txz|.tlz|.tbz ou dir-de-empacotamento>\n\nOPÇÕES:\n    -f,          Direciona dependências para um ficheiro em vez da saída padrão.\n                 Por padrão ele cria um arquivo .dep. Veja também -s.\n    -s,          Direciona dependências com informação de versão. Se\n                 combinado com -f, ele cria um arquivo slack-required\n    -a,          Verifica todos os ficheiros numa ávore de diretório em vez de\n                 seguir o FHS\n    -p,          Tenta detectar dependências python.\n    -j [jobs],   O número de jobs paralelos do depfinder para executar. Mais\n                 rápido se for o mesmo de número de seus CPUs/cores\n                 (padrão: 1)\n    -v,          Exibir informação de versão\n    -h,          Esta mensagem de ajuda"
+msgstr "depfinder: encontra as dependências dos pacotes Slackware\n\nutilização: depfinder [OPÇÕES] <pacote.tgz|.txz|.tlz|.tbz ou diretório>\n\nOPÇÕES:\n    -f,          Grava as dependências para um ficheiro em vez de stdout.\n                 Por definição, cria um ficheiro .dep. Consulte também -s.\n    -s,          Grava as dependências com informações de versão. \n                 Se combinado com -f, cria um ficheiro slack-required\n    -a,          Verifica todos os ficheiros na ávore de diretório em vez de\n                 seguir o FHS\n    -p,          Tenta detetar as dependências python.\n    -j [jobs],   O número de tarefas depfinder a executar. É mais\n                 rápido se for o mesmo de número dos seus CPUs/cores\n                 (padrão: 1)\n    -v,          Mostra as informações da versão\n    -h,          Mostra esta mensagem de ajuda"
 
 #: ../depfinder:64
 #, sh-format
 msgid ""
 "depfinder version $VERSION (c) 2009 George Vlahavas\n"
 "Run \"depfinder -h\" for help information"
-msgstr "depfinder version $VERSION (c) 2009 George Vlahavas\nExecute \"depfinder -h\" para informação de ajuda"
+msgstr "depfinder versão $VERSION (c) 2009 George Vlahavas\nExecute \"depfinder -h\" para mais informações"
 
 #: ../depfinder:105
 #, sh-format
 msgid "ERROR: No arguments found."
-msgstr "ERRO: Nenhum argumento encontrado."
+msgstr "Erro: nenhum argumento encontrado."
 
 #: ../depfinder:143
 #, sh-format
 msgid "ERROR: Number of jobs must be greater than one"
-msgstr "ERRO: Número de jobs deve ser maior que um"
+msgstr "Erro: o número de tarefas tem que ser maior que 1"
 
 #: ../depfinder:161
 #, sh-format
 msgid "ERROR: Too many arguments"
-msgstr "ERRO: Muitos argumentos"
+msgstr "Erro: demasiados argumentos"
 
 #: ../depfinder:168
 #, sh-format
 msgid "ERROR: $arg not found"
-msgstr "ERRO: $arg não encontrado"
+msgstr "Erro: $arg não encontrado"
 
 #: ../depfinder:179
 #, sh-format
 msgid "ERROR: $arg is not a package file or a directory!"
-msgstr "ERRO: $arg não é um pacote ou um diretório!"
+msgstr "Erro: $arg não é um pacote ou um diretório!"
 
 #: ../depfinder:300
 #, sh-format
 msgid "WARNING: python module $i not found."
-msgstr "AVISO: módulo python $i não encontrado."
+msgstr "Aviso: módulo python $i não encontrado."
 
 #: ../depfinder:326
 #, sh-format
 msgid "ERROR: package requires libraries not found in the system:"
-msgstr "ERRO: pacote requer bibliotecas não encontradas no sistema:"
+msgstr "Erro: o pacote requer bibliotecas não encontradas no sistema:"
