--- a/po/lv_LV.po
+++ b/po/lv_LV.po
@@ -3,20 +3,19 @@
 # This file is distributed under the same license as the PACKAGE package.
 # 
 # Translators:
-# Karim Oulad Chalha <herr.linux88@gmail.com>, 2013
 msgid ""
 msgstr ""
 "Project-Id-Version: depfinder\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2010-01-28 13:19+0200\n"
-"PO-Revision-Date: 2013-11-20 10:19+0000\n"
+"PO-Revision-Date: 2014-01-29 18:14+0000\n"
 "Last-Translator: gapan <vlahavas@gmail.com>\n"
-"Language-Team: Arabic (http://www.transifex.com/gapan/depfinder/language/ar/)\n"
+"Language-Team: Latvian (Latvia) (http://www.transifex.com/gapan/depfinder/language/lv_LV/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: ar\n"
-"Plural-Forms: nplurals=6; plural=n==0 ? 0 : n==1 ? 1 : n==2 ? 2 : n%100>=3 && n%100<=10 ? 3 : n%100>=11 && n%100<=99 ? 4 : 5;\n"
+"Language: lv_LV\n"
+"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n != 0 ? 1 : 2);\n"
 
 #: ../depfinder:41
 #, sh-format
@@ -65,7 +64,7 @@ msgstr ""
 #: ../depfinder:168
 #, sh-format
 msgid "ERROR: $arg not found"
-msgstr "خطأ: لم يتم العثور على $arg"
+msgstr ""
 
 #: ../depfinder:179
 #, sh-format
