--- a/po/pt_PT.po
+++ b/po/pt_PT.po
@@ -4,15 +4,15 @@
 # 
 # Translators:
 # Hugo Carvalho <hugokarvalho@hotmail.com>, 2012
-# phantomx <megaphantomx@bol.com.br>, 2011
+# Phantom X <megaphantomx@bol.com.br>, 2011
 msgid ""
 msgstr ""
 "Project-Id-Version: depfinder\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2010-01-28 13:19+0200\n"
-"PO-Revision-Date: 2013-04-29 08:26+0000\n"
+"PO-Revision-Date: 2013-11-20 10:19+0000\n"
 "Last-Translator: gapan <vlahavas@gmail.com>\n"
-"Language-Team: Portuguese (Portugal) (http://www.transifex.com/projects/p/depfinder/language/pt_PT/)\n"
+"Language-Team: Portuguese (Portugal) (http://www.transifex.com/gapan/depfinder/language/pt_PT/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
